{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 54,
  "lineage": "2bd36e12-457a-60bd-bb75-bc5daa4bffb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d78d8707cd9c1be8",
            "arn": "arn:aws:ec2:ca-central-1:333300162796:instance/i-0435d51dea3554602",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0435d51dea3554602",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f99674d84ad85309",
            "private_dns": "ip-10-0-1-133.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.133",
            "public_ip": "15.156.59.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-077ad1272581eec79",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03999546ac54397b2",
            "tags": {
              "Name": "MyTestEC2"
            },
            "tags_all": {
              "Name": "MyTestEC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00faa226239c3087b"
            ]
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_subnet.my_test_subnet",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:333300162796:internet-gateway/igw-0e5cb4c5b887686e5",
            "id": "igw-0e5cb4c5b887686e5",
            "owner_id": "333300162796",
            "tags": {
              "Name": "MyTestIGW"
            },
            "tags_all": {
              "Name": "MyTestIGW"
            },
            "vpc_id": "vpc-0e75932465ca57f19"
          },
          "dependencies": [
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:333300162796:route-table/rtb-07be16d51ad247c19",
            "id": "rtb-07be16d51ad247c19",
            "owner_id": "333300162796",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5cb4c5b887686e5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyTestIGW"
            },
            "tags_all": {
              "Name": "MyTestIGW"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e75932465ca57f19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_ig",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0903e29fcd70052ee",
            "route_table_id": "rtb-07be16d51ad247c19",
            "subnet_id": "subnet-03999546ac54397b2"
          },
          "dependencies": [
            "aws_internet_gateway.my_ig",
            "aws_route_table.public_rt",
            "aws_subnet.my_test_subnet",
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:333300162796:security-group/sg-00faa226239c3087b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00faa226239c3087b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP",
            "name_prefix": "",
            "owner_id": "333300162796",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e75932465ca57f19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_test_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:333300162796:subnet/subnet-03999546ac54397b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03999546ac54397b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "333300162796",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyTestSubnet"
            },
            "tags_all": {
              "Name": "MyTestSubnet"
            },
            "vpc_id": "vpc-0e75932465ca57f19"
          },
          "dependencies": [
            "aws_vpc.my_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:333300162796:vpc/vpc-0e75932465ca57f19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c62d1867f935e7ef",
            "default_route_table_id": "rtb-0c8fb211730162531",
            "default_security_group_id": "sg-00ea6d4ae3c5237bc",
            "dhcp_options_id": "dopt-0bcd265b9566ade06",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e75932465ca57f19",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c8fb211730162531",
            "owner_id": "333300162796",
            "tags": {
              "Name": "MyTestVPC"
            },
            "tags_all": {
              "Name": "MyTestVPC"
            }
          }
        }
      ]
    }
  ]
}